<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="version" translatable="false">v 0.3.3</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="share_title">Выберите приложение</string>
    <string name="yp_url" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email" translatable="false">axypypy@yandex.ru</string>
    <string name="message_subject_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_to_support">Спасибо за крутое приложение!</string>
    <string name="offer_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_name">Название трека</string>
    <string name="artist_name">Исполнитель</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="release">Год выхода</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="separator">Разделитель</string>
    <string name="placeholder">Заглушка</string>
    <string name="clear">Очистить</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="check_connection">Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="searchHint">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="default_time" translatable="false">0:00</string>
    <string name="player_error">Ошибка плеера</string>
    <string name="empty_track_url">Нет файла песни</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="add_playlist">Новый плэйлист</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="cancel_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_changes_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="end">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="permission_denied">Разрешение отклонено</string>
    <string name="permission_denied_message">Вы можете предоставить доступ к фотографиям в настройках приложения.</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист</string>
    <string name="tracks">треков</string>
    <string name="track">трек</string>
    <string name="alt_tracks">трека</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="deleted">удален</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks">В этом плейлисте нет списка треков</string>
    <string name="delete_a_track">Удалить трек?</string>
    <string name="do_you_really_want_to_delete_a_track">Вы действительно хотите удалить трек</string>
    <string name="share_playlist_via">Поделиться плейлистом через</string>
    <string name="do_you_want_to_delete_a_playlist">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="editInfo">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="edited">отредактирован</string>
</resources>