<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityStyle">

    <!-- ШАПКА -->
    <LinearLayout style="@style/HeadStyle"
        android:layout_marginBottom="24dp">

        <ImageButton style="@style/BackButtonStyle"
            android:id="@+id/ibBack"
            android:contentDescription="@string/back"/>

        <TextView style="@style/HeadTextStyle"
            android:text="@string/settings"/>

    </LinearLayout>

    <!-- НОЧНАЯ ТЕМА -->
    <FrameLayout style="@style/SettingsMenuItemStyle">

        <TextView style="@style/SettingsMenuTextStyle"
            android:text="@string/dark_theme"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/SettingsMenuSwitchStyle"
            android:id="@+id/swTheme"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <!-- ПОДЕЛИТЬСЯ ПРИЛОЖЕНИЕМ -->
    <FrameLayout style="@style/SettingsMenuItemStyle">

        <TextView style="@style/SettingsMenuTextStyle"
            android:text="@string/share"/>

        <ImageButton style="@style/SettingsMenuButtonStyle"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:id="@+id/ibShare"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share_24x24"/>
    </FrameLayout>

    <!-- НАПИСАТЬ В ПОДДЕРЖКУ -->
    <FrameLayout style="@style/SettingsMenuItemStyle">

        <TextView style="@style/SettingsMenuTextStyle"
            android:text="@string/support"/>

        <ImageButton style="@style/SettingsMenuButtonStyle"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:id="@+id/ibMailToSupport"
            android:contentDescription="@string/support"
            android:src="@drawable/ic_support_24x24"/>
    </FrameLayout>

    <!-- Пользовательское соглашение -->
    <FrameLayout style="@style/SettingsMenuItemStyle">

        <TextView style="@style/SettingsMenuTextStyle"
            android:text="@string/user_agreement"/>

        <ImageButton style="@style/SettingsMenuButtonStyle"
            android:src="@drawable/ic_next_24x24"
            android:id="@+id/ibUserAgreement"
            android:contentDescription="@string/next"/>
    </FrameLayout>
</LinearLayout>
