<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityStyle"
    android:layout_weight="0"
    tools:context=".settings.ui.SettingsFragment">

    <!-- ШАПКА -->
    <LinearLayout style="@style/HeadStyle"
        android:paddingVertical="14dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/primary_button_text_size"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500" />

    </LinearLayout>

    <!-- НОЧНАЯ ТЕМА -->
    <FrameLayout style="@style/SettingsMenuItemStyle">

        <TextView style="@style/SettingsMenuTextStyle"
            android:text="@string/dark_theme"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/SettingsMenuSwitchStyle"
            android:id="@+id/themeSwitcher"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <!-- ПОДЕЛИТЬСЯ ПРИЛОЖЕНИЕМ -->
    <FrameLayout style="@style/SettingsMenuItemStyle">

        <TextView style="@style/SettingsMenuTextStyle"
            android:text="@string/share_app"/>

        <ImageButton style="@style/SettingsMenuButtonStyle"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:id="@+id/shareButton"
            android:contentDescription="@string/share_app"
            android:src="@drawable/ic_share_24x24"/>
    </FrameLayout>

    <!-- НАПИСАТЬ В ПОДДЕРЖКУ -->
    <FrameLayout style="@style/SettingsMenuItemStyle">

        <TextView style="@style/SettingsMenuTextStyle"
            android:text="@string/support"/>

        <ImageButton style="@style/SettingsMenuButtonStyle"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:id="@+id/mailToSupButton"
            android:contentDescription="@string/support"
            android:src="@drawable/ic_support_24x24"/>
    </FrameLayout>

    <!-- Пользовательское соглашение -->
    <FrameLayout style="@style/SettingsMenuItemStyle">

        <TextView style="@style/SettingsMenuTextStyle"
            android:text="@string/user_agreement"/>

        <ImageButton style="@style/SettingsMenuButtonStyle"
            android:src="@drawable/ic_next_24x24"
            android:id="@+id/agreementButton"
            android:contentDescription="@string/next"/>
    </FrameLayout>
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:text="@string/version"/>
</LinearLayout>
