<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.ui.PlayerFragment">

<!-- Левый отступ -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

<!-- Правый отступ -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

<!-- Верхний отступ информации о треке -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/trackInfoTopBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

<!-- Левый отступ информации о треке -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/trackInfoLeftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

<!-- Правый отступ информации о треке -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/trackInfoRightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

<!-- Кнопка назад -->
        <ImageButton
            android:id="@+id/btnBack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_24x24" />

<!-- Обожка трека -->
        <ImageView
            android:id="@+id/tvTrackImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_placeholder_45x45"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintBottom_toTopOf="@id/tvTrackName" />

<!-- Название трека -->
        <TextView
            android:id="@+id/tvTrackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/track_name"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="22sp"
            android:textFontWeight="400"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="start|center"
            app:layout_constraintTop_toBottomOf="@id/tvTrackImage"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintBottom_toTopOf="@id/tvArtistName" />

<!-- Исполнитель -->
        <TextView
            android:id="@+id/tvArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/artist_name"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:textFontWeight="400"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="start|center"
            app:layout_constraintTop_toBottomOf="@id/tvTrackName"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintBottom_toTopOf="@id/btnPlayPause" />

<!-- Кнопка "Воспроизвести" -->
        <ImageButton
            android:id="@+id/btnPlayPause"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="8dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_button_play"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toBottomOf="@id/tvArtistName"
            app:layout_constraintStart_toEndOf="@id/ibAddToPlaylist"
            app:layout_constraintEnd_toStartOf="@id/btnInFavorite"
            app:layout_constraintBottom_toTopOf="@id/trackInfoTopBorder" />

<!-- Кнопка "Добавить в плэйлист" -->
        <ImageButton
            android:id="@+id/ibAddToPlaylist"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:src="@drawable/ic_button_add_to_playlist"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toTopOf="@id/btnPlayPause"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintBottom_toBottomOf="@id/btnPlayPause" />

<!-- Кнопка "Добавить в избранное" -->
        <ImageButton
            android:id="@+id/btnInFavorite"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:elevation="8dp"
            android:src="@drawable/ic_button_add_to_favorite"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toTopOf="@id/btnPlayPause"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintBottom_toBottomOf="@id/btnPlayPause" />

<!-- Время воспроизведения -->
        <TextView
            android:id="@+id/tvPlayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/default_time"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:textFontWeight="500"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btnPlayPause"
            app:layout_constraintStart_toStartOf="@id/btnPlayPause"
            app:layout_constraintEnd_toEndOf="@+id/btnPlayPause" />
<!-- Группа "Длительность трека" -->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/trackTimeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tvHeaderTrackTime,tvTrackTime" />

<!-- Заголовок длительности трека -->
        <TextView style="@style/tvHeaderTrackInfoPrimaryStyle"
            android:id="@+id/tvHeaderTrackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_time"
            app:layout_constraintTop_toBottomOf="@id/trackInfoTopBorder"
            app:layout_constraintStart_toStartOf="@id/trackInfoLeftBorder"
            app:layout_constraintBottom_toTopOf="@id/tvHeaderAlbum" />

<!-- Длительность трека -->
        <TextView style="@style/tvTrackInfoPrimaryStyle"
            android:id="@+id/tvTrackTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            tools:text="5:32"
            app:layout_constraintTop_toBottomOf="@id/trackInfoTopBorder"
            app:layout_constraintStart_toEndOf="@id/tvHeaderTrackTime"
            app:layout_constraintEnd_toStartOf="@id/trackInfoRightBorder"
            app:layout_constraintBottom_toTopOf="@id/tvAlbum" />

<!-- Группа "Альбом" -->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/albumGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tvHeaderAlbum,tvAlbum" />

<!-- Заголовок "Альбом" -->
        <TextView style="@style/tvHeaderTrackInfoPrimaryStyle"
            android:id="@+id/tvHeaderAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderTrackTime"
            app:layout_constraintStart_toStartOf="@id/trackInfoLeftBorder"
            app:layout_constraintBottom_toTopOf="@id/tvHeaderRelease" />

<!-- Название альбома -->
        <TextView style="@style/tvTrackInfoPrimaryStyle"
            android:id="@+id/tvAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            tools:text="Ну какой то альбом"
            app:layout_constraintTop_toBottomOf="@id/tvTrackTime"
            app:layout_constraintStart_toEndOf="@id/tvHeaderAlbum"
            app:layout_constraintEnd_toStartOf="@id/trackInfoRightBorder"
            app:layout_constraintBottom_toTopOf="@id/tvReleaseDate" />

<!-- Группа "Год выхода"-->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/releaseGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tvHeaderRelease,tvReleaseDate" />

<!-- Заголовок "Год выхода" -->
        <TextView style="@style/tvHeaderTrackInfoPrimaryStyle"
            android:id="@+id/tvHeaderRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderAlbum"
            app:layout_constraintStart_toStartOf="@id/trackInfoLeftBorder"
            app:layout_constraintBottom_toTopOf="@id/tvHeaderGenre" />

<!-- Год выхода -->
        <TextView style="@style/tvTrackInfoPrimaryStyle"
            android:id="@+id/tvReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            tools:text="1988"
            app:layout_constraintTop_toBottomOf="@id/tvAlbum"
            app:layout_constraintStart_toEndOf="@id/tvHeaderRelease"
            app:layout_constraintEnd_toStartOf="@id/trackInfoRightBorder"
            app:layout_constraintBottom_toTopOf="@id/tvGenre" />

<!-- Группа "Жанр" -->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/genreGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tvHeaderGenre,tvGenre" />

<!-- Заголовок "Жанр" -->
        <TextView style="@style/tvHeaderTrackInfoPrimaryStyle"
            android:id="@+id/tvHeaderGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderRelease"
            app:layout_constraintStart_toStartOf="@id/trackInfoLeftBorder"
            app:layout_constraintBottom_toTopOf="@id/tvHeaderCountry" />

<!-- Жанр -->
        <TextView style="@style/tvTrackInfoPrimaryStyle"
            android:id="@+id/tvGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            tools:text="Ну какой то жанр"
            app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
            app:layout_constraintStart_toEndOf="@id/tvHeaderGenre"
            app:layout_constraintEnd_toStartOf="@id/trackInfoRightBorder"
            app:layout_constraintBottom_toTopOf="@id/tvCountry" />

<!-- Группа "Страна" -->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/countryGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tvHeaderCountry,tvCountry" />

<!-- Заголовк "Страна" -->
        <TextView style="@style/tvHeaderTrackInfoPrimaryStyle"
            android:id="@+id/tvHeaderCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/country"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderGenre"
            app:layout_constraintStart_toStartOf="@id/trackInfoLeftBorder"
            app:layout_constraintBottom_toBottomOf="parent" />

<!-- Страна -->
        <TextView style="@style/tvTrackInfoPrimaryStyle"
            android:id="@+id/tvCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            tools:text="Эфиопия"
            app:layout_constraintTop_toBottomOf="@id/tvGenre"
            app:layout_constraintStart_toEndOf="@id/tvHeaderCountry"
            app:layout_constraintEnd_toStartOf="@id/trackInfoRightBorder"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bottomsheet_background"
        android:orientation="vertical"

        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/bar" />

        <TextView
            android:id="@+id/bottomViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_to_playlist"
            android:textSize="19sp" />

        <Button android:id="@+id/newPlaylistButton"
            style="Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:text="@string/new_playlist"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            app:cornerRadius="54dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            tools:itemCount="5"
            android:scrollbars="horizontal"
            tools:listitem="@layout/playlist_mini_item" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>